@@ -14,7 +14,8 @@
         <setting label="31004" type="bool" id="Write_NFOS" default="false" />      
         <setting label="31001" type="slider" id="paging_tvshows" default="2" range="1,100" option="int"/>
     	<setting label="31002" type="slider" id="paging_movies" default="2" range="1,100" option="int"/>
-    	<setting label="31003" type="bool" id="folder_movies" default="false"/>
+    	<setting label="31003" type="bool" id="folder_medialistentry_movie" default="false"/>
+    	<setting label="31005" type="bool" id="folder_movie" default="false"/>
     </category>
       <category label="33000">
       	<setting label="33001" type="bool" id="Updat_at_startup" default="true"/>
